# radial

./: CMakeLists.txt  Main.cpp
Tests/Fun2DProd/: README.txt  run_rbf.py
Tests/Fun2DQuad/: README.txt  run_rbf.py
Tests/Fun2DSine/: README.txt  run_rbf.py
